feat: homework for w2 in codefod